# iaa_projeto2

./: .gitignore  README.md  RESULT.md  train_iter.py  validatev2.py
final/: configs.py  data.py  evaluate.py  fft_spectrum.py  gradcam.py  hp_sweep.py  hp_sweep_combined.py  models.py  pixel_hist.py  pyproject.toml  roc_combined.py  sample_grid.py  train.py
final/results/: dataset_stats.json  error_fft_cnn.json  error_fft_resnet_scratch.json  external_metrics.json
final/results/cnn/: history.json  hp_sweep_lr.json  hp_sweep_weight_decay.json  metrics.json
final/results/cnn_no_norm/: history.json  metrics.json
final/results/resnet_scratch/: history.json  hp_sweep_lr.json  hp_sweep_weight_decay.json  metrics.json
final/results/resnet_scratch.backup_wd1e-4/: history.json  metrics.json
final/results/resnet_scratch_no_norm/: history.json  metrics.json
persist/checkpoints/cnn/: best.pth
persist/checkpoints/cnn_no_norm/: best.pth
persist/checkpoints/resnet_scratch_no_norm/: history.json  metrics.json
persist/images/: external_metrics.json
processing/: fingerprint_extractor.py  freq_processor.py  image_processor.py  pyproject.toml
scripts/: 1_get_original_data.py  2_augmentation.py  2_external_eval.py
