[project]
name = "iaa-final"
version = "0.1.0"
description = "CIFAKE real/AI image classification - final pipeline"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7",
    "torchvision>=0.22",
    "tqdm",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "kagglehub<0.4",
    "datasets>=4.8.5",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
